Fix color input slightly off center

--- a/packages/js-draw/src/toolbar/widgets/components/makeColorInput.scss
+++ b/packages/js-draw/src/toolbar/widgets/components/makeColorInput.scss
@@ -12,7 +12,7 @@
 		height: $size;
 
 		// Center & move to left of input
-		top: calc($size / 2);
+		top: 50%;
 		left: 0;
 
 		border-radius: 50%;
